tests/baselines/reference/privateStaticMemberAccessibility.js
//// [tests/cases/conformance/classes/members/accessibility/privateStaticMemberAccessibility.ts] ////

//// [privateStaticMemberAccessibility.ts]
class Base {
    private static foo: string;
}

class Derived extends Base {
    static bar = Base.foo; // error
    bing = () => Base.foo; // error
}

//// [privateStaticMemberAccessibility.js]
"use strict";
class Base {
}
class Derived extends Base {
    constructor() {
        super(...arguments);
        this.bing = () => Base.foo; // error
    }
}
Derived.bar = Base.foo; // error
